<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="@drawable/ripple"
    android:padding="8dp">

    <ImageView
        android:id="@+id/tvThumbnail"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/rumah_sakit"
        android:scaleType="fitCenter"
        android:src="@drawable/rs" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>